# sefdm-sdr

./: .gitattributes  .gitignore
01_ofmd_init_model/: ofdm_init_model.m
02_ofdm_model_for_test_func/: ofdm_model_for_test_func_01.m  ofdm_model_for_test_func_02.m
02_ofdm_phy_802_11a_model/: ofdm_model_for_test_func_01.m  ofdm_model_for_test_func_02.m
02_ofdm_phy_802_11a_model/ofdm_phy_802_11a/: Add_GI.m  AllocateInfAndPilotSubcarrier.m  Constellate_From_LTS.m  Constellate_From_OFDMSymbols.m  ConstellationDemap.m  ConstellationMap.m  Del_GI.m  GenerateLTS.m  GenerateSTS.m  Generate_OFDMSymbols.m  OFDM_tx.m
03_ofdm_timing_synch/: ofdm_signal_detection_model.m  ofdm_symbol_timing_model.m
03_ofdm_timing_synch/using_functions/: autocorr_L_D.m  cross_corr.m  graph_signal_detection.m
03_ofdm_timing_synch_model/: ofdm_signal_detection_model.m  ofdm_symbol_timing_model.m
03_ofdm_timing_synch_model/functions/: draw_frame.m  graph_signal_detection_FOR_PRESENTATION_DEL.m  graph_symbol_timing_hist.m  printf_err.m
03_ofdm_timing_synch_model/using_functions/: graph_symbol_timing.m
04_ofdm_time_freq_synch_model/: CoarseFreqSynchModel.m  CoarseTimeSynchModel.m  FineFreqSynchModel.m  FineTimeSynchModel.m  FreqOffsetConstellationModel.m  SignalDetectionModel.m  SynchModel.m  UBodyModel.m
04_ofdm_time_freq_synch_model/functions/: CoarseTimeSynch.m  FineTimeSynch.m  FreqSynch.m  SignalDetection.m
05_real_ofdm_one_signal_processing/: RealCoarseFreqSynch.m  RealCoarseTimeSynch.m  RealDemodulateLTS.m  RealFineFreqSynch.m  RealFineTimeSynch.m  RealOneSignalSynch.m  RealSignalDetection.m  SeeComplexEnvelopeModule.m  TruncateSignal.m
05_real_ofdm_one_signal_processing/functions/: ChannelEstimationByLTS.m  Graph_ChannelAndResidualFOCompensation.m  Graph_CoarseTimeSynch.m  Graph_FineTimeSynch.m  Graph_PhaseSynch.m  Graph_SignalDetection.m  PhaseSynchByLTS.m  PhaseSynchByPilots.m
06_real_ofdm_signals_processing/: CheckSigDetectAlgorithm.m  RealOFDMSignalsProcessing.m  RealOFDMSignalsProcessing1.m
06_real_ofdm_signals_processing/functions/: GraphSave_CoarseTimeSynch.m  GraphSave_Constellation.m  GraphSave_FineTimeSynch.m
07_sefdm_init_model/: ZF.m  form_const_for_detection_algorithm.m  print_results.m  sefdm_init_model.m
07_sefdm_init_model/functions/: IC.m  ID.m  MF.m  ML.m  TSVD.m  ZF.m  form_const_for_detection_algorithm.m  generate_idft_matrix.m  slicing.m
07_sefdm_init_model/results/: MF_IC_16_0.8.mat  MF_IC_16_0.8_BPSK.mat  MF_IC_4_0.8.mat  MF_ID_16_0.8_BPSK_1.mat  MF_ID_16_0.8_BPSK_2.mat  MF_ID_16_0.8_BPSK_3.mat  MF_ID_26_0.72222_BPSK_3.mat  MF_ID_26_0.8125_BPSK_1.mat  MF_ID_26_0.8125_BPSK_2.mat  MF_ID_26_0.8125_BPSK_3.mat  MF_ID_26_0.8125_BPSK_4.mat  MF_ID_26_0.8125_BPSK_5.mat  MF_ID_26_0.92857_BPSK_3.mat  MF_MF_16_0.8_BPSK.mat  MF_ML_4_0.8.mat  MF_ML_4_0.8_BPSK.mat  MF_ML_8_0.8_BPSK.mat  MF_TSVD_16_0.8.mat  MF_TSVD_16_0.8_BPSK_13.mat  MF_TSVD_4_0.8.mat  MF_ZF_16_0.8.mat  MF_ZF_16_0.8_BPSK.mat  MF_ZF_4_0.8.mat  readme.txt
08_sefdm_generate_packets/: generate_bits.m  generate_packets.m  sefdm_model.m
08_sefdm_generate_packets/bits/: information_bits.mat  information_bits.txt
08_sefdm_generate_packets/functions/: sefdm_FFT.m  sefdm_IFFT.m  sefdm_MF_demodulator.m  sefdm_add_cp.m  sefdm_allocate_subcarriers.m  sefdm_compensate_residual_freq_offset.m  sefdm_del_cp.m  sefdm_equalizer.m  sefdm_estimate_channel.m  sefdm_estimate_residual_freq_offset.m  sefdm_init.m  sefdm_modulator.m  sefdm_post_demodulator.m
08_sefdm_generate_packets/packets/: readme.txt
09_sefdm_one_real_signal_processing/: RealOnePacketProcessing.m
10_ieee_802_11a_prmbl_detection/: see_metric.m
11_sefdm_analyze_rx_bits/: analyze_rx_bits.m
11_sefdm_analyze_rx_bits/functions/: analyze_err_bit.m  analyze_packet_no.m
11_sefdm_analyze_rx_bits/rx_sefdm_26.05.18/: part_1.m  part_2.m  part_3.m  readme.txt
12_sefdm_ID_detector_research/: ID_BER_model.m  print_results_for_ID.m
12_sefdm_ID_detector_research/results/: 8_15_0.83333_BPSK.mat  8_16_0.5_BPSK.mat  8_16_0.66667_BPSK.mat  8_16_0.88889_BPSK.mat  8_16_0.8_BPSK.mat  8_18_0.75_BPSK.mat  8_18_0.85714_BPSK.mat  8_32_0.5_BPSK.mat  8_32_0.66667_BPSK.mat  8_32_0.88889_BPSK.mat  8_32_0.8_BPSK.mat  8_48_0.5_BPSK.mat  8_48_0.66667_BPSK.mat  8_48_0.88889_BPSK.mat  8_48_0.8_BPSK.mat  8_64_0.5_BPSK.mat  8_64_0.66667_BPSK.mat  8_64_0.88889_BPSK.mat  (+2 more)
13_graph_for_diplom/: print_SEFDM_OFDM_spectr.m  spectr.emf
Signals/: SeeComplexEnvelopeModule.m  TruncateSignal.m
common/: UBody.m  randn_cmplx.m
gr-learn/: CMakeLists.txt  MANIFEST.md
gr-learn/lib/: CMakeLists.txt  clip_stream_impl.cc  clip_stream_impl.h  history_test_impl.cc  history_test_impl.h  message_test_impl.cc  message_test_impl.h  my_add_ff_impl.cc  my_add_ff_impl.h  qa_learn.cc  qa_learn.h  signal_detect_impl.cc  signal_detect_impl.h  tag_test_impl.cc  tag_test_impl.h  test_learn.cc
gr-sefdm/: CMakeLists.txt  MANIFEST.md
gr-sefdm/grc/: CMakeLists.txt  sefdm_extract_packets_from_stream.xml  sefdm_header_synchronization.xml  sefdm_id_detector.xml  sefdm_ieee_802_11a_coarse_time_synch.xml  sefdm_ieee_802_11a_ofdm_symbol_demodulation.xml  sefdm_ieee_802_11a_preamble_detection.xml  sefdm_ieee_802_11a_synchronization.xml  sefdm_mf_demodulator.xml  sefdm_ofdm_symbol_demodulation.xml
gr-sefdm/lib/: CMakeLists.txt  common.cc  extract_packets_from_stream_impl.cc  extract_packets_from_stream_impl.h  header_synchronization_impl.cc  header_synchronization_impl.h  id_detector_impl.cc  id_detector_impl.h  ieee_802_11a_coarse_time_synch_impl.cc  ieee_802_11a_coarse_time_synch_impl.h  ieee_802_11a_ofdm_symbol_demodulation_impl.cc  ieee_802_11a_ofdm_symbol_demodulation_impl.h  ieee_802_11a_preamble_detection_impl.cc  ieee_802_11a_preamble_detection_impl.h  ieee_802_11a_synchronization_impl.cc  ieee_802_11a_synchronization_impl.h  mf_demodulator_impl.cc  mf_demodulator_impl.h  ofdm_symbol_demodulation_impl.cc  ofdm_symbol_demodulation_impl.h  qa_sefdm.cc  qa_sefdm.h  test_sefdm.cc
graph/: draw_text.m  num2txt_EbNo.m
ofdm_phy_802_11a/: Generate_LongSymbols.m  Generate_ShortSymbols.m  OFDM_tx.m
(+108 files in other folders)
